--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - DB_NAME=nc_tutorials_db
       - DB_USER=postgres
       - DB_PASSWORD=admin123
-      - DB_HOST=ec2-3-139-6-131.us-east-2.compute.amazonaws.com
+      - DB_HOST=nctutorials.c6phc007cxvs.us-east-2.rds.amazonaws.com
       - DB_PORT=5432
       - DATABASE=postgres
       - VIRTUAL_HOST=ec2-3-139-6-131.us-east-2.compute.amazonaws.com
